--- a/style.css
+++ b/style.css
@@ -121,6 +121,7 @@ nav svg{
     animation: slideDown 2s ease-in-out;
 }
 .ritezgroup img{
+    padding-top: 15px;
     border-radius: 5px;
 }
 .btn{
